fix bug when user add a post or comment which contain a very long word and layouts breaks, improve responsiveness on mobile

--- a/client/src/components/AddComment.module.scss
+++ b/client/src/components/AddComment.module.scss
@@ -68,3 +68,20 @@
     }
   }
 }
+
+// MEDIA QUERIES
+@media only screen and (max-width: 400px) {
+  .comment {
+    gap: 1rem;
+  }
+
+  .input {
+    padding: 0.5rem 0.8rem;
+    font-size: 1.8rem;
+  }
+
+  .addButton {
+    padding: 0.5rem 0.8rem;
+    font-size: 1.4rem;
+  }
+}
