--- a/client/src/components/AddPost.module.scss
+++ b/client/src/components/AddPost.module.scss
@@ -12,6 +12,8 @@
 }
 
 .userPhoto {
+  width: 6rem;
+  height: 6rem;
   img {
     width: 6rem;
     height: 6rem;
