--- a/client/src/components/Comment.module.scss
+++ b/client/src/components/Comment.module.scss
@@ -34,6 +34,7 @@
 
 .text {
   font-size: 1.4rem;
+  overflow-wrap: anywhere;
 }
 
 .actions {
