--- a/client/src/components/Post.module.scss
+++ b/client/src/components/Post.module.scss
@@ -83,6 +83,7 @@
   margin-bottom: 1.6rem;
   font-size: 1.6rem;
   font-weight: 100;
+  overflow-wrap: anywhere;
 
   textarea {
     width: 100%;
@@ -433,3 +434,5 @@
     background-color: $color-green-1;
   }
 }
+
+// MEDIA QUERIES
