--- a/client/src/sass/base.scss
+++ b/client/src/sass/base.scss
@@ -30,3 +30,9 @@ body {
     font-size: 50%;
   }
 }
+
+@media only screen and (max-width: 400px) {
+  html {
+    font-size: 40%;
+  }
+}
